test/data/fail/literals/numeric.js
function f()
{
   "use strict";
   function g(){ }
   //001;
   //#
}
001;
